--- a/Assignment_1/Assignment_1.csproj
+++ b/Assignment_1/Assignment_1.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>Assignment_1.Driver</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -46,7 +49,7 @@
     <Compile Include="Appliance.cs" />
     <Compile Include="Dishwasher.cs" />
     <Compile Include="Driver.cs" />
-    <Compile Include="Microwaves.cs" />
+    <Compile Include="Microwave.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Refrigerator.cs" />
